panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__struct__test_error_non_struct_member_bitfields.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/struct/test_error_non_struct_member_bitfields.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unexpected token `{` of kind `LBrace`
   ╭─[panko/tests/cases/struct/test_error_non_struct_member_bitfields.c:1:20]
   │
 1 │ int function():123 {
   │                    ┬  
   │                    ╰── expected one of the following token kinds: [";", ",", "=", "*", "(", "[", "+", "-", "/", "%", "==", "!=", "<", "<=", ">", ">=", "&", "^", "|", "<<", ">>", "&&", "||", "?", "++", "--", ".", "->"]
───╯
